--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fl_chart: ^0.40.0
   fl_animated_linechart: ^1.1.9
   table_calendar: ^3.0.9
+  http: ^0.13.3
   flutter:
     sdk: flutter
 
